--- a/Source/CorreccionTesis/capitulo6.tex
+++ b/Source/CorreccionTesis/capitulo6.tex
@@ -709,9 +709,16 @@ Además estudiamos el sesgo y el ECM para el caso donde el número de looks es $
 Entonces, priorizando la calidad del ajuste, el porcentaje de casos de convergencia y el sesgo continuamos el análisis con los núcleos $\Gamma$ y LN.
 
 \begin{table}[hbt]										
-	\centering									
+	\centering		
+		\sisetup{
+		detect-all,
+		table-number-alignment = center,
+		table-figures-integer = 1,
+		table-figures-decimal = 3,
+		table-space-text-post = {\superscript{*}},
+	}									
 	\small									
-	\begin{tabular}{cc|rrrrr|rrrr}									
+	\begin{tabular}{cc|SSSSS|SSSS}									
 		\toprule									
 		\multirow{3 }{*}{$\alpha$} &\multirow{3 }{*}{ n  } & \multicolumn{5}{c|}{\multirow{2 }{*}{MISE}} & \multicolumn{4}{c}{Porcentaje de casos de}\\
 		&  &            &            &    &    &         &   \multicolumn{4}{c}{no convergencia}\\
@@ -724,84 +731,92 @@ Entonces, priorizando la calidad del ajuste, el porcentaje de casos de convergen
 		&  & \mc{$\Gamma^1$} & \mc{$\Gamma^2$} & \mc{LN} & \mc{IG} & \multicolumn{1}{c|}{IGJstar}  & $\Gamma$ & \mc{LN} & \mc{IG} & \mc{IGJstar}  \\
 		\midrule				
 		\multirow{5 }{*}{$-1.5$} 
-		 &  $9  $ 	&  	 $0.407$ 	&	 $0.411$ 	&	 $0.811$ 	&	 $6.119$  	&	 $41.330$ 	&	$0$	&	$0.4$	&	$0.4$	&	$0$ \\
-		 &  $25 $ 	&  	 $0.123$ 	&	 $0.145$ 	&	 $0.184$ 	&	 $2.464$  	&	 $17.024$ 	&	$0$	&	$0$		&	$0$		&	$0$ \\
-		 &  $49 $ 	&  	 $0.082$ 	&	 $0.100$ 	&	 $0.538$ 	&	 $1.157$  	&	 $9.671$ 	&	$0$	&	$0$		&	$0$		&	$0$ \\
-		 &  $81 $ 	&  	 $0.064$ 	&	 $0.079$ 	&	 $0.085$ 	&	 $0.753$  	&	 $6.126$ 	&	$0$	&	$0$		&	$0$		&	$0$ \\
-		 &  $121$ 	&  	 $0.064$ 	&	 $0.076$ 	&	 $0.081$ 	&	 $0.528$  	&	 $4.000$ 	&	$0$	&	$0$		&	$0$		&	$0$ \\
+		 &   9    	&  	  0.407  	&	  0.411  	&	  0.811  	&	  6.119   	&	  41.330  	&	 0 	&	 0.4 	&	 0.4 	&	 0  \\
+		 &   25   	&  	  0.123  	&	  0.145  	&	  0.184  	&	  2.464   	&	  17.024  	&	 0 	&	 0 		&	 0 		&	 0  \\
+		 &   49   	&  	  0.082  	&	  0.100  	&	  0.538  	&	  1.157   	&	  9.671  	&	 0 	&	 0 		&	 0 		&	 0  \\
+		 &   81   	&  	  0.064  	&	  0.079  	&	  0.085  	&	  0.753   	&	  6.126  	&	 0 	&	 0 		&	 0 		&	 0  \\
+		 &   121  	&  	  0.064  	&	  0.076  	&	  0.081  	&	  0.528   	&	  4.000  	&	 0 	&	 0 		&	 0 		&	 0  \\
 		\cmidrule(r){1-7}
 		 \cmidrule(r){8-11}									
 		 \multirow{5 }{*}{$-3$}	
-		 &  $9  $ 	&  	 $0.253$ 	&	 $0.273$ 	&	 $0.563$ 	&	 $12.473$ 	&	 $50.020$ 	&	$5.2$&	$7.2$	& $\textbf{8}$	& $6.8$ \\
-		 &  $25 $ 	&  	 $0.080$ 	&	 $0.093$ 	&	 $0.106$ 	&	 $3.217$  	&	 $25.401$ 	&	$0.2$ &	$1$		&	$0.6$		& $0.6$ \\
-		 &  $49 $ 	&  	 $0.044$ 	&	 $0.053$ 	&	 $0.071$ 	&	 $0.686$  	&	 $16.401$ 	&	$0$	&	$0.4$		&	$0$		&	$0$ \\
-		 &  $81 $ 	&  	 $0.030$ 	&	 $0.033$ 	&	 $0.034$ 	&	 $0.255$  	&	 $11.577$ 	&	$0$	&	$0$		&	$0$		&	$0$ \\
-		 &  $121$ 	&  	 $0.022$ 	&	 $0.022$ 	&	 $0.029$ 	&	 $0.166$  	&	 $8.985$ 	&	$0$	&	$0$	    &	$0$		&	$0$ \\
+		 &   9    	&  	  0.253  	&	  0.273  	&	  0.563  	&	  12.473  	&	  50.020  	&	 5.2 &	 7.2 	&   \bfseries 8 	&  6.8  \\
+		 &   25   	&  	  0.080  	&	  0.093  	&	  0.106  	&	  3.217   	&	  25.401  	&	 0.2  &	 1 		&	 0.6 		&  0.6  \\
+		 &   49   	&  	  0.044  	&	  0.053  	&	  0.071  	&	  0.686   	&	  16.401  	&	 0 	&	 0.4 		&	 0 		&	 0  \\
+		 &   81   	&  	  0.030  	&	  0.033  	&	  0.034  	&	  0.255   	&	  11.577  	&	 0 	&	 0 		&	 0 		&	 0  \\
+		 &   121  	&  	  0.022  	&	  0.022  	&	  0.029  	&	  0.166   	&	  8.985  	&	 0 	&	 0 	    &	 0 		&	 0  \\
 		\cmidrule(r){1-7}
 		\cmidrule(r){8-11}										
 		 \multirow{5 }{*}{$-5$}	
-		 &  $9  $ 	&  	 $0.238$ 	&	 $0.266$ 	&	 $0.432$ 	&	 $15.315$ 	&	 $63.384$ 	&	$9.6$	&	$13.2$		& $\textbf{17}$ 	&	$13.2$ \\
-		 &  $25 $ 	&  	 $0.066$ 	&	 $0.085$ 	&	 $0.087$ 	&	 $4.647$  	&	 $32.939$ 	&	$3.4$	& $\textbf{5}$ 	&	$2$ 		&	$1.6$ \\
-		 &  $49 $ 	&  	 $0.042$ 	&	 $0.048$ 	&	 $0.064$ 	&	 $0.677$  	&	 $24.405$ 	&	$1.4$		&	$1.2$			&	$1$			&	$0.4$ \\
-		 &  $81 $ 	&  	 $0.027$ 	&	 $0.027$ 	&	 $0.033$ 	&	 $0.285$  	&	 $18.906$ 	&	$0.4$		&	$0.8$			&	$0.2$			&	$0$ \\
-		 &  $121$ 	&  	 $0.019$ 	&	 $0.016$ 	&	 $0.025$ 	&	 $0.179$  	&	 $15.920$ 	&	$0$		&	$0.2$			&	$0$			&	$0$ \\
+		 &   9    	&  	  0.238 	&	  0.266  	&	  0.432  	&	  15.315  	&	  63.384  	&	 9.6 	&	 13.2 		&  \bfseries 17  	&	 13.2  \\
+		 &   25   	&  	  0.066  	&	  0.085  	&	  0.087  	&	  4.647   	&	  32.939  	&	 3.4 	&  \bfseries 5  	&	 2  		&	 1.6  \\
+		 &   49   	&  	  0.042  	&	  0.048  	&	  0.064  	&	  0.677   	&	  24.405  	&	 1.4 		&	 1.2 			&	 1 			&	 0.4  \\
+		 &   81   	&  	  0.027  	&	  0.027  	&	  0.033  	&	  0.285   	&	  18.906  	&	 0.4 		&	 0.8 			&	 0.2 			&	 0  \\
+		 &   121  	&  	  0.019  	&	  0.016  	&	  0.025  	&	  0.179   	&	  15.920  	&	 0 		&	 0.2 			&	 0 			&	 0  \\
 		\cmidrule(r){1-7}
 		\cmidrule(r){8-11}										
 		\multirow{5 }{*}{$-8$}	
-		&  $9  $ 	&  	 $0.237$ 	&	 $0.263$ 	&	 $0.383$ 	&	 $18.106$ 	&	 $73.081$ 	&	$16.6$	&	$19$		& $\textbf{26.2}$ &	$18$ \\
-		&  $25 $ 	&  	 $0.072$ 	&	 $0.088$ 	&	 $0.112$ 	&	 $5.134 $ 	&	 $40.479$ 	&	$81.81$	& $\textbf{11}$	&	$8.8$		&	$4.2$ \\
-		&  $49 $ 	&  	 $0.041$ 	&	 $0.044$ 	&	 $0.048$ 	&	 $0.930 $ 	&	 $30.231$ 	&	$5$	&	$5.4$		&	$4.2$		&	$1.2$ \\
-		&  $81 $ 	&  	 $0.026$ 	&	 $0.024$ 	&	 $0.031$ 	&	 $0.329 $ 	&	 $25.712$ 	&	$4.4$	&	$4$		&	$2$		&	$0.2$ \\
-		&  $121$ 	&  	 $0.017$ 	&	 $0.014$ 	&	 $0.020$ 	&	 $0.214 $ 	&	 $21.193$ 	&	$1.8$ 	&	$2$		&	$0.8$			&	$0.4$ \\
+		&   9    	&  	  0.237  	&	  0.263  	&	  0.383  	&	  18.106  	&	  73.081  	&	 16.6 	&	 19 		&  \bfseries 26.2  &	 18  \\
+		&   25   	&  	  0.072  	&	  0.088  	&	  0.112  	&	  5.134   	&	  40.479  	&	 81.81 	&    \bfseries 11 &	 8.8 		&	 4.2  \\
+		&   49   	&  	  0.041  	&	  0.044  	&	  0.048  	&	  0.930   	&	  30.231  	&	 5 	    &	 5.4 		&	 4.2 		&	 1.2  \\
+		&   81   	&  	  0.026  	&	  0.024  	&	  0.031  	&	  0.329   	&	  25.712  	&	 4.4 	&	 4 		    &	 2 		    &	 0.2  \\
+		&   121  	&  	  0.017  	&	  0.014  	&	  0.020  	&	  0.214   	&	  21.193  	&	 1.8  	&	 2 		    &	 0.8 		&	 0.4  \\
 		\bottomrule
 	\end{tabular}										
 \caption{\label{MiseyCantCasosNoConvergenciaL=3} MISE y porcentaje de casos de no convergencia $L=3$.}									
 \end{table}	
 
 \begin{table}[hbt]										
-	\centering									
+	\centering		
+	\sisetup{
+		detect-all,
+		table-number-alignment = center,
+		table-figures-integer = 1,
+		table-figures-decimal = 3,
+		table-space-text-post = {\superscript{*}},
+	}							
 	\small									
-	\begin{tabular}{cc|rrrr|rrrr}									
+	\begin{tabular}{cc|SSSS|SSSS}	
 		\toprule									
 		\multirow{2 }{*}{$\alpha$} &\multirow{2 }{*}{ n  } & \multicolumn{4}{c|}{Sesgo} & \multicolumn{4}{c}{ECM}\\
 		\cmidrule(r){3-6}
 		\cmidrule(r){7-10}
 		%\midrule
+		\sisetup{detect-weight=true,detect-inline-weight=math}	
 		&  & \mc{$\Gamma$} & \mc{LN} & \mc{IG} & IGJstar & \mc{$\Gamma$}  & \mc{LN} & \mc{IG} & IGJstar \\  
 		\midrule				
 		\multirow{5 }{*}{$-1.5$} 									
-		& $9$	& $-0.183$	& $-0.117$  	& $-0.84$	& $-0.525$	& $0.407$	& $0.417$	& $1.432$ & $1.348$  \\ 
-		& $25$ 	& $-0.058$	& $-0.007$	    & $-0.538$	& $-0.182$	& $0.07$	& $0.049$	& $0.496$ & $0.129$ \\ 
-		& $49$	& $-0.035$	& $0.002$	    & $-0.404$	& $-0.105$	& $0.034$	& $0.019$	& $0.217$ & $0.040$ \\ 
-		& $81$	& $-0.036$	& $0.005$	    & $-0.348$	& $-0.072$	& $0.024$	& $0.011$	& $0.158$ & $0.021$ \\ 
-		& $121$	& $-0.041$	& $0.014$	    & $-0.295$	& $-0.046$	& $0.024$	& $0.008$	& $0.108$ & $0.011$ \\ 
+		&  9 	&  -0.183 	&  -0.117   	&  -0.84 	&  -0.525 	&  0.407 	&  0.417 	&  1.432  &  1.348   \\ 
+		&  25  	&  -0.058 	&  -0.007 	    &  -0.538 	&  -0.182 	&  0.07 	&  0.049 	&  0.496  &  0.129  \\ 
+		&  49 	&  -0.035 	&  0.002 	    &  -0.404 	&  -0.105 	&  0.034 	&  0.019 	&  0.217  &  0.040  \\ 
+		&  81 	&  -0.036 	&  0.005 	    &  -0.348 	&  -0.072 	&  0.024 	&  0.011 	&  0.158  &  0.021  \\ 
+		&  121 	&  -0.041 	&  0.014 	    &  -0.295 	&  -0.046 	&  0.024 	&  0.008 	&  0.108  &  0.011  \\ 
 		%\midrule
 		\cmidrule(r){1-6}
 		\cmidrule(r){7-10}									
 		\multirow{5 }{*}{$-3$}									
-		& $9$   & $-0.652$    & $-0.552$	& $-1.659$				& $-1.584$	& $5.873$	& $8.945$	& $10.65$	 		 & $11.965$\\ 
-		& $25$	& $-0.338$    & $-0.066$	& $-0.582$				& $-0.684$	& $3.542$	& $2.352$	& $\textbf{1.843}$	 & $3.475$ \\ 
-		& $49$	& $-0.014$    & $0.015$  	& $-0.215$				& $-0.319$	& $0.928$	& $1.34$	& $\textbf{0.549}$	 & $1.145$ \\ 
-		& $81$	& $0.079$	  & $0.091$	    & $\textbf{-0.03}$	    & $-0.165$	& $0.397$	& $0.441$	& $\textbf{0.212}$	 & $0.490$ \\ 
-		& $121$	& $0.117$	  & $0.104$	    & $\textbf{0.025}$	    & $-0.108$	& $0.239$	& $0.285$	& $0.294$	 		 & $0.287$ \\ 
+		&  9    &  -0.652     &  -0.552 	&  -1.659 				&  -1.584 	&  5.873 		&  8.945 		&  10.65 	 			 &  11.965 \\ 
+		&  25 	&  -0.338     &  -0.066 	&  -0.582 				&  -0.684 	&  3.542 		&  2.352 		&  \bfseries 1.843 		 &  3.475  \\ 
+		&  49 	&  -0.014     &  0.015   	&  -0.215 				&  -0.319 	&  0.928 		&  1.34 		&   \bfseries 0.549 	 &  1.145  \\ 
+		&  81 	&  0.079 	  &  0.091 	    &  \bfseries{-0.03 } 	    &  -0.165 	&  0.397 	&  0.441 		&   \bfseries 0.212  	 &  0.490  \\ 
+			&  121 	&  0.117 	  &  0.104 	    &  \bfseries{0.025} 	    &  -0.108 	&  0.239 	&  0.285 	&  0.294 	 		 	&  0.287 \\ 
 		%\midrule
 		\cmidrule(r){1-6}
 		\cmidrule(r){7-10}									
 		\multirow{5 }{*}{$-5$}									
-		& $9$	& $0.084$	& $0.67$	& $\textbf{-0.645}$      & $-0.743$			    & $11.348$		& $10.726$  	& $\textbf{9.943}$	 & $13.158$ \\ 
-		& $25$	& $0.225$	& $0.632$	& $\textbf{0.092}$	     & $-0.531$			    & $6.506$	    & $6.648$		& $\textbf{4.603}$	 & $8.359$ \\ 
-		& $49$	& $0.36$2	& $0.339$	& $0.604$	 			 & $\textbf{-0.099}$	& $3.989$	    & $5.787$	    & $\textbf{2.338}$	 & $4.688$ \\ 
-		& $81$	& $0.318$	& $0.437$	& $0.771$	 			 & $\textbf{-0.101}$	& $3.045$	    & $2.761$	    & $\textbf{1.852}$	 & $3.623$ \\ 
-		& $121$	& $0.36$	& $0.397$	& $0.896$	 			 & $\textbf{0.108}$	    & $1.95$	    & $2.041$	    & $\textbf{1.454}$	 & $\textbf{1.505}$ \\ 
+		&  9 	&  0.084 	&  0.67 	&  \bfseries{-0.645}      	&  -0.743 			    &  11.348 		&  10.726   	&   \bfseries 9.943  	 &  13.158  \\ 
+		&  25 	&  0.225 	&  0.632 	&  \bfseries{0.092} 	  	 &  -0.531 			    &  6.506 	    &  6.648 		&   \bfseries 4.603  	 &  8.359  \\ 
+		&  49 	&  0.362	&  0.339 	&  0.604 	 				 &   \bfseries -0.099  	&  3.989 	    &  5.787 	    &   \bfseries 2.338  	 &  4.688  \\ 
+		&  81 	&  0.318 	&  0.437 	&  0.771 	 				 &   \bfseries -0.101  	&  3.045 	    &  2.761 	    &   \bfseries 1.852  	 &  3.623  \\ 
+		&  121 	&  0.36 	&  0.397 	&  0.896 	 				 &   \bfseries 0.108  	    &  1.95 	    &  2.041 	    &   \bfseries 1.454 	 &   \bfseries 1.505  \\ 
 		%\midrule
 		\cmidrule(r){1-6}
 		\cmidrule(r){7-10}									
 		\multirow{5 }{*}{$-8$}									
-		& $9$	& $2.346$	& $2.952$   & $\textbf{1.14}$     	& $1.382$				& 18.944		& $21.516$	& $\textbf{16.879}$	 & $19.118$ \\ 
-		& $25$	& $1.787$	& $2.209$	& $\textbf{1.96}$		& $0.93$				& $13.309$	 	& $16.633$	& $\textbf{11.463}$	 & $13.551$ \\ 
-		& $49$	& $1.41$	& $1.735$	& $2.442$				& $\textbf{1.073}$		& $13.02$	    & $12.658$  & $10.667$	         & $\textbf{10.100}$ \\ 
-		& $81$	& $1.26$	& $1.462$	& $2.498$				& $\textbf{0.779}$		& $9.727$	    & $9.893$	& $10.468$	 		 & $10.278$  \\ 
-		& $121$	& $1.062$	& $1.235$	& $2.689$				& $\textbf{0.915}$		& $7.425$	    & $8.555$	& $8.983$	         & $\textbf{5.975}$  \\ 
+		&  9 	&  2.346 	&  2.952    &   \bfseries 1.14       	&  1.382 				& 18.944		&  21.516 	&   \bfseries 16.879  	 &  19.118  \\ 
+		&  25 	&  1.787 	&  2.209 	&   \bfseries 1.96  		&  0.93 				&  13.309 	 	&  16.633 	&   \bfseries 11.463  	 &  13.551  \\ 
+		&  49 	&  1.41 	&  1.735 	&  2.442 				&   \bfseries 1.073  		&  13.02 	    &  12.658   &  10.667 	         &   \bfseries 10.100  \\ 
+		&  81 	&  1.26 	&  1.462 	&  2.498 				&   \bfseries 0.779  		&  9.727 	    &  9.893 	&  10.468 	 		 &  10.278   \\ 
+		&  121 	&  1.062 	&  1.235 	&  2.689 				&   \bfseries 0.915  		&  7.425 	    &  8.555 	&  8.983 	         &   \bfseries 5.975    \\ 
  		\bottomrule 								
 	\end{tabular}										
 	\caption{\label{SesgoyECMSinContConConstL=3} Sesgo y ECM para $L=3$.}									
@@ -829,36 +844,36 @@ En la tabla~\ref{NoConvMLyNGyLNyLC_L=3} se muestra el porcentaje de casos de no 
 	\caption{Porcentaje de casos de no convergencia  L=$3$.}
 	\centering
 	\label{NoConvMLyNGyLNyLC_L=3}
-	\begin{tabular}{c*6{r}}
+	\begin{tabular}{c*6{S}}
 			\toprule		
 			$\alpha$ & $n$ & MV & $\Gamma$ & LN &  LC\\
 			\midrule
 			\multirow{2 }{*}{$-1.5$} 
-			&   $9$ & $0$ & $0$ & $0.4$ &  $2.8$\\
-			&  $25$ & $0$ & $0$ & $0$ & $0.2$\\
+			&   9 &  0  &  0  &  0.4  &   2.8 \\
+			&   25  &  0  &  0  &  0  &  0.2 \\
 			\midrule
 			\multirow{5 }{*}{$-3$} 
-			&   $9$ & $13$    & $5.2$  & $7.2$  &  $28.4$\\ 
-			&  $25$ & $1$     & $0.2$  & $1$    &  $11.4$\\
-			&  $49$ & $0.2$   & $0$    & $0.4$  & $3.8$\\ 
-			&  $81$ & $0$     & $0$    & $0$    & $2.4$\\ 
-			& $121$ & $0$     & $0$    & $0$    & $0.2$\\ 
+			&    9  &  13     &  5.2   &  7.2   &   28.4 \\ 
+			&   25  &  1      &  0.2   &  1     &   11.4 \\
+			&   49  &  0.2    &  0     &  0.4   &  3.8 \\ 
+			&   81  &  0      &  0     &  0     &  2.4 \\ 
+			&  121  &  0      &  0     &  0     &  0.2 \\ 
 			\midrule
 			\multirow{5 }{*}{$-5$} 
-			&   $9$ & $26.8$  & $9.6$  & $13.2$ &  $35.2$\\ 
-			&  $25$ & $10$    & $3.4$  & $5$    & $28.6$\\ 
-			&  $49$ & $3.4$   & $1.4$  & $1.2$  & $18.6$\\ 
-			&  $81$ & $0.2$   & $0.4$  & $0.8$  & $15.8$\\ 
-			& $121$ & $0.4$   & $0$    & $0.2$  & $9.6$\\ 
-			& $500$ & $0$     & $0$    & $0$    & $0.6$\\ 
+			&    9  &  26.8   &  9.6   &  13.2  &   35.2 \\ 
+			&   25  &  10     &  3.4   &  5     &  28.6 \\ 
+			&   49  &  3.4    &  1.4   &  1.2   &  18.6 \\ 
+			&   81  &  0.2    &  0.4   &  0.8   &  15.8 \\ 
+			&  121  &  0.4    &  0     &  0.2   &  9.6 \\ 
+			&  500  &  0      &  0     &  0     &  0.6 \\ 
 			\midrule
 			\multirow{5 }{*}{$-8$} 
-			&   $9$  & $39.6$ & $16.6$ & $19$   & $44.2$\\ 
-			&  $25$  & $28.6$ & $9$    & $11$   & $36.4$\\ 
-			&  $49$  & $18.4$ & $5$    & $5.4$  & $31.6$\\ 
-			&  $81$  & $12$   & $4.4$  & $4$    & $27.2$\\ 
-			& $121$  & $5.8$  & $1.8$  & $2$    & $24.6$\\ 
-			& $500$  & $0$    & $0$    & $0.2$  & $9$\\
+			&    9   &  39.6  &  16.6  &  19    &  44.2 \\ 
+			&   25   &  28.6  &  9     &  11    &  36.4 \\ 
+			&   49   &  18.4  &  5     &  5.4   &  31.6 \\ 
+			&   81   &  12    &  4.4   &  4     &  27.2 \\ 
+			&  121   &  5.8   &  1.8   &  2     &  24.6 \\ 
+			&  500   &  0     &  0     &  0.2   &  9 \\
 			\bottomrule 	
 		\end{tabular}
 \end{table}	
